--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path=""/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/arukreid/git/SwordWorld2_0/lib/jackson-annotations-2.13.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/arukreid/git/SwordWorld2_0/lib/jackson-core-2.13.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/arukreid/git/SwordWorld2_0/lib/jackson-databind-2.13.2.2.jar"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
