--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path=""/>
+	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="module" value="true"/>
@@ -9,5 +9,5 @@
 	<classpathentry kind="lib" path="lib/jackson-annotations-2.13.2.jar"/>
 	<classpathentry kind="lib" path="lib/jackson-core-2.13.2.jar"/>
 	<classpathentry kind="lib" path="lib/jackson-databind-2.13.2.2.jar"/>
-	<classpathentry kind="output" path=""/>
+	<classpathentry kind="output" path="bin"/>
 </classpath>
