--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,10 @@ local.properties
 .loadpath
 .recommenders
 
+!jackson-annotations-2.13.2.jar
+!jackson-core-2.13.2.jar
+!jackson-databind-2.13.2.2.jar
+
 # External tool builders
 .externalToolBuilders/
 
